--- a/packages/cli/test/functional/test_site/expected/testList.html
+++ b/packages/cli/test/functional/test_site/expected/testList.html
@@ -213,10 +213,18 @@
           <li>Only 1 item</li>
         </ul>
         <ol>
-          <li>One item with customization</li>
+          <li>One item with customization icon</li>
         </ol>
         <ul style="list-style-type: none; padding-inline-start: 0px;">
           <li style="display: flex;"><span aria-hidden="true" class="glyphicon glyphicon-education" style="font-size: unset; min-width: 16px; line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">​</span>
+            <div>Only 1 item</div>
+          </li>
+        </ul>
+        <ol>
+          <li>One item with customization text</li>
+        </ol>
+        <ul style="list-style-type: none; padding-inline-start: 0px;">
+          <li style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">Step 1</span>
             <div>Only 1 item</div>
           </li>
         </ul>
@@ -231,13 +239,27 @@
           </li>
         </ul>
         <ol>
-          <li>One item + nested list with customization</li>
+          <li>One item + nested list with icon customization</li>
         </ol>
         <ul style="list-style-type: none; padding-inline-start: 0px;">
           <li style="display: flex;"><span aria-hidden="true" class="glyphicon glyphicon-education" style="font-size: unset; min-width: 16px; line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">​</span>
             <div>Only 1 item
               <ul style="list-style-type: none; padding-inline-start: 0px;">
                 <li style="display: flex;"><span aria-hidden="true" class="glyphicon glyphicon-education" style="font-size: unset; min-width: 16px; line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">​</span>
+                  <div>Only 1 item</div>
+                </li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+        <ol>
+          <li>One item + nested list with text customization</li>
+        </ol>
+        <ul style="list-style-type: none; padding-inline-start: 0px;">
+          <li style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">Step 1</span>
+            <div>Only 1 item
+              <ul style="list-style-type: none; padding-inline-start: 0px;">
+                <li style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">Step 1.1</span>
                   <div>Only 1 item</div>
                 </li>
               </ul>
@@ -307,18 +329,57 @@
           </li>
         </ul>
         <ol>
+          <li>Text inheritance test</li>
+        </ol>
+        <ul style="list-style-type: none; padding-inline-start: 0px;">
+          <li style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">First layer</span>
+            <div>Item A</div>
+          </li>
+          <li style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">First layer</span>
+            <div>Item B
+              <ul style="list-style-type: none; padding-inline-start: 0px;">
+                <li style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">Second layer</span>
+                  <div>Sub-item B1</div>
+                </li>
+                <li style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">Second layer</span>
+                  <div>Sub-item B2</div>
+                </li>
+                <li style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">Second layer</span>
+                  <div>Sub-item B3
+                    <ul style="list-style-type: none; padding-inline-start: 0px;">
+                      <li style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">Third layer</span>
+                        <div>Sub-sub-item B3.1</div>
+                      </li>
+                      <li style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">Third layer</span>
+                        <div>Sub-sub-item B3.2
+                          <ul>
+                            <li>Sub-sub-sub-item B3.2.1</li>
+                          </ul>
+                        </div>
+                      </li>
+                    </ul>
+                  </div>
+                </li>
+                <li style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">Second layer</span>
+                  <div>Sub-item B4</div>
+                </li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+        <ol>
           <li>First item no customization test</li>
         </ol>
         <ul>
           <li>Item A</li>
-          <li icon="./images/deer.jpg">Item B
+          <li icon="./images/deer.jpg" text="First">Item B
             <ul>
               <li>Sub-item B1</li>
-              <li icon="fas-file-code">Sub-item B2</li>
+              <li icon="fas-file-code" text="Should not be appearing">Sub-item B2</li>
               <li>Sub-item B3
                 <ul>
                   <li>Sub-sub-item B3.1</li>
-                  <li icon="./images/deer.jpg" i-width="50px">Sub-sub-item B3.2</li>
+                  <li icon="./images/deer.jpg" i-width="50px" text="Should not be appearing">Sub-sub-item B3.2</li>
                   <li>Sub-sub-sub-item B3.2.1</li>
                 </ul>
               </li>
@@ -366,7 +427,7 @@
           </li>
         </ul>
         <ol>
-          <li>Testing with various attributes</li>
+          <li>Testing with various icon attributes</li>
         </ol>
         <ul style="list-style-type: none; padding-inline-start: 0px;">
           <li style="display: flex;"><span aria-hidden="true" class="glyphicon glyphicon-education text-primary" style="font-size: 20px; min-width: 16px; line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">​</span>
@@ -398,6 +459,84 @@
                   </div>
                 </li>
                 <li style="display: flex;"><span aria-hidden="true" class="fas fa-file-code text-success" style="font-size: 30px; min-width: 16px; line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">​</span>
+                  <div>Sub-item B4</div>
+                </li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+        <ol>
+          <li>Testing with various text attributes</li>
+        </ol>
+        <ul style="list-style-type: none; padding-inline-start: 0px;">
+          <li style="display: flex;"><span aria-hidden="true" style="font-size: 20px; line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;" class="text-primary">Step 1</span>
+            <div>Item A</div>
+          </li>
+          <li style="display: flex;"><span aria-hidden="true" style="font-size: 20px; line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;" class="text-warning">Step 2</span>
+            <div>Item B
+              <ul style="list-style-type: none; padding-inline-start: 0px;">
+                <li style="display: flex;"><span aria-hidden="true" style="font-size: 10px; line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;"><em>MD</em></span>
+                  <div>Sub-item B1</div>
+                </li>
+                <li style="display: flex;"><span aria-hidden="true" style="font-size: 10px; line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;" class="text-success"><em>MD</em></span>
+                  <div>Sub-item B2</div>
+                </li>
+                <li style="display: flex;"><span aria-hidden="true" style="font-size: 10px; line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;" class="text-success"><em>MD</em></span>
+                  <div>Sub-item B3
+                    <ul style="list-style-type: none; padding-inline-start: 0px;">
+                      <li style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">👍</span>
+                        <div>Sub-sub-item B3.1</div>
+                      </li>
+                      <li style="display: flex;"><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">👍</span>
+                        <div>Sub-sub-item B3.2
+                          <ul>
+                            <li t-class="text-danger">Sub-sub-sub-item B3.2.1</li>
+                          </ul>
+                        </div>
+                      </li>
+                    </ul>
+                  </div>
+                </li>
+                <li style="display: flex;"><span aria-hidden="true" style="font-size: 10px; line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;" class="text-success"><em>MD</em></span>
+                  <div>Sub-item B4</div>
+                </li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+        <ol>
+          <li>Mixing text and icon</li>
+        </ol>
+        <ul style="list-style-type: none; padding-inline-start: 0px;">
+          <li style="display: flex;"><span aria-hidden="true" class="glyphicon glyphicon-education" style="font-size: unset; min-width: 16px; line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">​</span><span aria-hidden="true" style="font-size: 20px; line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;" class="text-primary">Step 1</span>
+            <div>Item A</div>
+          </li>
+          <li style="display: flex;"><span aria-hidden="true" class="glyphicon glyphicon-education" style="font-size: unset; min-width: 16px; line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">​</span><span aria-hidden="true" style="font-size: 20px; line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;" class="text-warning">Step 2</span>
+            <div>Item B
+              <ul style="list-style-type: none; padding-inline-start: 0px;">
+                <li style="display: flex;"><span style="padding-bottom: 0.3em; padding-top: 0.3em; font-size: unset; min-width: 16px; line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;"><img src="/test_site/images/deer.jpg" alt="Icon" style="width: 20px; height: 20px; display: inline-block;">​​</span><span aria-hidden="true" style="font-size: 10px; line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;"><em>MD</em></span>
+                  <div>Sub-item B1</div>
+                </li>
+                <li style="display: flex;"><span style="padding-bottom: 0.3em; padding-top: 0.3em; font-size: unset; min-width: 16px; line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;"><img src="/test_site/images/deer.jpg" alt="Icon" style="width: 30px; height: 30px; display: inline-block;">​​</span><span aria-hidden="true" style="font-size: 10px; line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;" class="text-success"><em>MD</em></span>
+                  <div>Sub-item B2</div>
+                </li>
+                <li style="display: flex;"><span style="padding-bottom: 0.3em; padding-top: 0.3em; font-size: unset; min-width: 16px; line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;"><img src="/test_site/images/deer.jpg" alt="Icon" style="width: 30px; height: 30px; display: inline-block;">​​</span><span aria-hidden="true" style="font-size: 10px; line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;" class="text-success"><em>MD</em></span>
+                  <div>Sub-item B3
+                    <ul style="list-style-type: none; padding-inline-start: 0px;">
+                      <li style="display: flex;"><span aria-hidden="true" style="font-size: unset; min-width: 16px; line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">👍​</span><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">👍</span>
+                        <div>Sub-sub-item B3.1</div>
+                      </li>
+                      <li style="display: flex;"><span aria-hidden="true" style="font-size: unset; min-width: 16px; line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">👍​</span><span aria-hidden="true" style="line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">👍</span>
+                        <div>Sub-sub-item B3.2
+                          <ul>
+                            <li t-class="text-danger">Sub-sub-sub-item B3.2.1</li>
+                          </ul>
+                        </div>
+                      </li>
+                    </ul>
+                  </div>
+                </li>
+                <li style="display: flex;"><span style="padding-bottom: 0.3em; padding-top: 0.3em; font-size: unset; min-width: 16px; line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;"><img src="/test_site/images/deer.jpg" alt="Icon" style="width: 30px; height: 30px; display: inline-block;">​​</span><span aria-hidden="true" style="font-size: 10px; line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;" class="text-success"><em>MD</em></span>
                   <div>Sub-item B4</div>
                 </li>
               </ul>
